--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ toml==0.10.2
 voluptuous==0.13.1
 huggingface-hub==0.15.1
 wandb==0.15.7
+numpy==1.26.4
 # for loading Diffusers' SDXL
 invisible-watermark==0.2.0 
 open-clip-torch==2.20.0
